Fixing Mohr's Circle Alignment

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body{
 	width: 250px;
 	height: 250px;
 	margin-top: 15px;
-	padding-left: 0px;
+	margin-left: -5px;
 }
 
 #numbersGame{
